30-Jun-95	Version 2.1 release via ftp and www
28-Apr-95	object types 7/8/9 folded back into regular distribution (V2.1)
		Rename setup to balls; change references everywhere
		HTML version of documentation
13-Apr-95	remove unused code from modsubs.f which made solaris unhappy
01-Mar-95	V2.03 onto ftp site
24-Feb-95	Fix bug in CYL1 routine which caused pieces of cylinder ends
		to disappear if they tipped too far toward the viewer
20-Jan-95	Move data statements in ribbon1.f, render.f to make linux happy
29-Nov-94	update ftp site to release V2.02
28-Nov-94	add Elya Kurktchi's Makefile for SUNOS
28-Nov-94	add section on Moslcript->Raster3D stereo to docs.ps
16-Nov-94	update ftp site to release V2.01
 5-Aug-94	add filter utility avs2ps for producing B&W PostScript output
 4-Aug-94	include patch to Molscript V1.4 to support dotted lines
21-Jul-94	bugfix to input code for PLANE objects,
		add hints section to manual
22-Apr-94	Version 2.0 release