@@ -1,6 +1,6 @@
-most recent change:	  1-May-1995
+most recent change:	  3-Aug-1995
 
-The file Raster3D_2.1.tar.Z contains version 2.1 of RASTER3D.
+The file Raster3D_2.11.tar.Z contains version 2.11 of RASTER3D.
 It is a unified distribution which has been tested on the following 
 machines:
 
@@ -21,7 +21,6 @@ New in version 2.1:
 - renamed "setup" to be "balls", in hope of avoiding conflicts with
   other system-dependent utilities called "setup"
 - more accounting information reported in render
-
 
 Other changes since first distribution of version 2.0:
 
